# zeedraw

./: CMakeLists.txt  ChangeLog  README.md  TODO  zeedraw.pc  zeedraw.pc.cmake
include/: zeedraw.h
src/: CMakeLists.txt  zd_gli.c  zd_gli.h  zd_internals.h  zd_opengl.c  zd_opengl.h  zd_software.c  zd_software.h  zeedraw.c
test/: CMakeLists.txt  balls.c  zdtest.c  zdtutils.c  zdtutils.h
